# jade2hdl

./: .gitignore  Makefile  README.md  TODO  clean.sh  debugging.xoj  jade2hdl.cabal  makefile  stack.yaml  test.sh
app/: Main.hs
app-data/: gates.json
app-data/vhdl/: prelude.vhdl
app-data/vhdl/template/: combinational-module.mustache  test-case-if-block.mustache  test-dut.mustache
app-data/viz/: prelude.dot
app-data/viz/template/: combinational-module.mustache  combinational-testbench.mustache
docs/: rotation.xoj  signal-names.org
docs/graphviz-noodling/: show.bash  submodule.dot
jade-decode/: README.md  jade-decode.cabal  makefile  stack.yaml  test.sh
jade-decode/app-data/: gates
jade-decode/src/Jade/: Decode.hs
jade-decode/src/Jade/Decode/: Bundle.hs  Coord.hs  Decode.hs  ModTest.hs  Pretty.hs  Sig.hs  Types.hs  Util.hs  Val.hs
jade-decode/test/: TestAll.hs  TestDecode.hs  TestSig.hs
jade-decode/test/Jade/Decoder/Test/: TestAll.hs  TestDecode.hs  TestSig.hs
rawr/: rawr.cabal
rawr/src/Rawr/: Note.hs  Rawr.hs  Types.hs
src/: Lib.hs  Sig.hs
src/Jade/: Arbitrary.hs  BoundingBox.hs  Bundle.hs  Common.hs  Component.hs  CoolStory.hs  Coord.hs  Decode.hs  GComp.hs  Graph.hs  Icon.hs  IconTypes.hs  Jumper.hs  MemUnit.hs  Memo.hs  ModTest.hs  Module.hs  Net.hs  Node.hs  Note.hs  OO.hs  Part.hs  Port.hs  QUF.hs  Schematic.hs  Sig.hs  Signal.hs  Story.hs  SubModule.hs  Term.hs  TestParser.hs  TopLevel.hs  TopLevel.hs.orig  TopLevelInternal.hs  Trace.hs  Types.hs  UnionFind.hs  UnionFindST.hs  Util.hs  VHDL.hs  (+3 more)
src/Jade/Back/: Viz.hs
src/Jade/Middle/: Middle.hs  SubModuleRep.hs  Types.hs
src/Jade/Rawr/: Types.hs
test/: ModTest.hs  Spec.hs  TestAll.hs  TestCoord.hs  TestDecode.hs  TestIcon.hs  TestMiddle.hs  TestModTest.hs  TestModule.hs  TestNet.hs  TestSchematic.hs  TestSig.hs  TestTopLevel.hs  TestTopLevel.hs.orig  TestUnionFind.hs  TestUtil.hs  TestVhdl.hs  TestWire.hs  asdf.vhdl
test-data/: AND2.json  AND2Rot90.json  And2Ports.json  And2Ports2.json  And2Ports3.json  And2Ports4.json  And41.json  AndStuff4.json  AndStuff5.json  AndStuff6.json  AnonWire1.json  AnonWire2.json  AnonWire3.json  Bool1.json  Bool2.json  Buffer1.json  Buffer2.json  Buffer3.json  Buffer4.json  Buffer5.json  Buffer5_1.json  Buffer5_2.json  Buffer5_3.json  Buffer6.json  Buffer7.json  Buffer8.json  BuiltInAnd4.json  BuiltInAnd4Messy.json  CL.json  CLA1.json  CLA1_notext.json  CLA32.json  CLA4.json  CLwiresAdded.json  Constant1.json  Constant2.json  Constant3.json  CycleCounter.json  CycleIdentity1.json  FA1.json  (+129 more)
test-data/auto-vhdl/: Dgdx6LE5zBzD.vhdl
test-data/modtests/: alu-small.test  alu.test
test-data/vhdl/: pddLNXO0pWNvo.vhdl
test-data/vhdl-examples/: test-gen-make-module.vhdl  testbench-progress.vhdl  work-obj93.cf
test-data/vhdl/AND2/: AND2.vhdl
test-data/vhdl/AND23/: AND23.vhdl  build.sh
test-data/vhdl/AND23-with-clock/: AND23.vhdl
test-data/vhdl/mod1/: build.sh  pddLNXO0pWNvo.vhdl
test-data/vhdl/simple/: Makefile  build.sh
