name:                jade2hdl
version:             0.1.0.0
--
-- synopsis:
-- description:
homepage:            https://github.com/drhodes/jade2hdl#readme
license:             MIT
license-file:        LICENSE
author:              Derek Rhodes
maintainer:          physci@gmail.com
copyright:           2017 Derek Rhodes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jade.Decode
                     , Jade.Types
                     , Jade.TopLevel
                     , Jade.ModTest
                     , Jade.Sig
                     , Jade.Graph
                     , Jade.Module
                     , Jade.Wire
  build-depends:       QuickCheck >= 2.9.2,
                       vector-instances,
                       aeson >= 1.0.2.1,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.1,
                       containers >= 0.5.7.1,
                       derive >= 2.6.2,
                       hashable >= 1.2.6.0,
                       hashids >= 1.0.2.3,
                       language-vhdl >= 0.1.2.8,
                       mtl >= 2.2.1,
                       optparse-applicative >= 0.13.2.0,
                       parsec >= 3.1.11,
                       parsec3-numbers >= 0.1.0,
                       scientific,
                       transformers >= 0.5.2.0,
                       vector >= 0.11.0.0
  default-language:    Haskell2010

executable jade2hdl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       QuickCheck >= 2.9.2
                     , aeson >= 1.0.2.1
                     , base
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5.7.1
                     , derive >= 2.6.2
                     , hashids >= 1.0.2.3
                     , jade2hdl
                     , language-vhdl >= 0.1.2.8
                     , mtl >= 2.2.1
                     , optparse-applicative >= 0.13.2.0
                     , parsec >= 3.1.11
                     , transformers >= 0.5.2.0
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

test-suite jade2hdl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestAll.hs                       
  build-depends:       QuickCheck
                     , QuickCheck >= 2.9.2
                     , aeson >= 1.0.2.1
                     , base
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5.7.1
                     , derive >= 2.6.2
                     , hashable >= 1.2.6.0
                     , hashids >= 1.0.2.3
                     , jade2hdl
                     , language-vhdl >= 0.1.2.8
                     , mtl >= 2.2.1
                     , parsec >= 3.1.11
                     , transformers >= 0.5.2.0
                     , vector >= 0.11.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/jade2hdl
