name:                jade2hdl
version:             0.1.0.0
--
-- synopsis:
-- description:
homepage:            https://github.com/drhodes/jade2hdl#readme
license:             MIT
license-file:        LICENSE
author:              Derek Rhodes
maintainer:          physci@gmail.com
copyright:           2017 Derek Rhodes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, test
  exposed-modules:     Jade.Decode
                     , Jade.Common
                     , Jade.Port
                     , Jade.Term
                     , Jade.SubModule
                     , Jade.Types
                     , Jade.BoundingBox
                     , Jade.TopLevel
                     , Jade.ModTest
                     , Jade.Sig
                     , Jade.UnionFindST
                     , Jade.Schematic
                     , Jade.Net
                     , Jade.Part
                     , Jade.Module
                     , Jade.Wire
                     , Jade.Coord
                     , Jade.Jumper
                     , Jade.Vhdl
                     , Jade.Util
                     , Jade.Icon
                     , Jade.Signal
                     , Jade.MemUnit
                     , Jade.Middle.Types
                     , Jade.Middle.Middle
                     , Jade.Rawr.Types
                     , Jade.Back.Viz
                     , Jade.Bundle
                     , Jade.Node
                     , Jade.Val
                     , Jade.Story
                     , Jade.Note

                     , TestModule
                     , TestUtil
                     
  build-depends: QuickCheck >= 2.9.2,
                 aeson >= 1.0.2.1,
                 ansi-terminal >= 0.6.3.1,
                 array >= 0.5.1.1,
                 base >= 4.7 && < 5,
                 bytestring >= 0.10.8.1,
                 containers >= 0.5.7.1,
                 file-embed >= 0.0.10,
                 hashable >= 1.2.6.0,
                 hashids >= 1.0.2.3,
                 mtl >= 2.2.1,
                 mustache >= 2.1.4,
                 parallel >= 3.2.1.1,
                 parsec >= 3.1.11,
                 parsec3-numbers >= 0.1.0,
                 scientific,
                 string-class >= 0.1.6.5,
                 text >= 1.2.2.1,
                 text-format-simple >= 1.1.0,
                 transformers >= 0.5.2.0,
                 vector >= 0.11.0.0,
                 directory >= 1.3.0.0,
                 process >= 1.4.3.0
                 
  default-language:    Haskell2010
  ghc-options:         -eventlog
  -- -Wunused-binds

test-suite jade2hdl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestAll.hs
  
  other-modules:       TestDecode
                     , TestVhdl
                     , TestModule
                     , TestTopLevel
                     , TestUtil
                     , TestIcon
                     , TestWire
                     , TestSig
                     , TestMiddle
                     , TestSchematic
                       
  build-depends: aeson >= 1.0.2.1
               , base
               , bytestring >= 0.10.8.1
               , containers >= 0.5.7.1
               , file-embed >= 0.0.10
               , hashable >= 1.2.6.0
               , jade2hdl
               , mtl >= 2.2.1
               , parallel >= 3.2.1.1
               , directory >= 1.3.0.0
               , process >= 1.4.3.0
               , text >= 1.2.2.1
               , text-format-simple >= 1.1.0
                                        
  ghc-options: -j8 -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010


executable jade2hdl
  hs-source-dirs: app  
  main-is:        Main.hs
  ghc-options:    -eventlog -threaded -rtsopts -with-rtsopts=-N
  
  build-depends: base
               , jade2hdl
               , optparse-applicative >= 0.13.2.0
               , text >= 1.2.2.1
               
  default-language: Haskell2010

  
source-repository head
  type:     git
  location: https://github.com/githubuser/jade2hdl
