name:                jade-decode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/jade-decode#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jade.Decode.Decode
                     , Jade.Decode.Util
                     , Jade.Decode.Types
                     , Jade.Decode.ModTest
                     , Jade.Decode.Bundle
                     , Jade.Decode.Sig
                     , Jade.Decode.Val
                     , Jade.Decode.Coord
                       
  build-depends:       aeson >= 1.1.2.0
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5.7.1
                     , hashable >= 1.2.6.1
                     , file-embed >= 0.0.10
                     , string-class >= 0.1.6.5
                     , hashids >= 1.0.2.3
                     , mtl >= 2.2.1
                     , parsec >= 3.1.11
                     , parsec3-numbers >= 0.1.0
                     , scientific >= 0.3.5.2
                     , text >= 1.2.2.2
                     , vector >= 0.12.0.1
  default-language:    Haskell2010

test-suite jade-decode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestAll.hs
  
  other-modules: TestDecode
               , TestSig
  
  build-depends:       aeson >= 1.1.2.0
                     , rawr
                     , base
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5.7.1
                     , hashable >= 1.2.6.1
                     , hashids >= 1.0.2.3
                     , jade-decode
                     , mtl >= 2.2.1
                     , scientific >= 0.3.5.2
                     , text >= 1.2.2.2
                     , vector >= 0.12.0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/jade-decode
